--- a/src/RpnCalc.Web/angular.json
+++ b/src/RpnCalc.Web/angular.json
@@ -1,7 +1,6 @@
 {
   "$schema": "https://json.schemastore.org/angular-cli",
   "version": 1,
-  "defaultProject": "rpn-calc-web",
   "projects": {
     "rpn-calc-web": {
       "projectType": "application",
@@ -25,11 +24,11 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "rpn-calc-web:build"
+            "buildTarget": "rpn-calc-web:build"
           },
           "configurations": {
             "development": {
-              "browserTarget": "rpn-calc-web:build:development"
+              "buildTarget": "rpn-calc-web:build:development"
             }
           }
         },
@@ -46,5 +45,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
